--- a/index.html
+++ b/index.html
@@ -8,10 +8,29 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="tittle">
-        <h1>TIC TAC TOC</h1>
+    <div id="title">
+        <div id="winner"></div>
+        <!-- <img class="image_title" src="https://www.kindpng.com/picc/m/179-1794778_tic-tac-toe-design-for-tic-tac-toe.png" alt="Tic Tac Toe - Design For Tic Tac Toe, HD Png Download@kindpng.com"> -->
+        <div class="title">
+            <img class="img_title off im1" src="assets/images/image_x.png" alt="X">
+            <h1 class="h1_title">NOUGHTS</h1> 
+            <img class="img_title im1" src="assets/images/image_o.png" alt="O">
+        </div>
+        <div class="title">
+        <img class="img_title off im2" src="assets/images/image_o.png" alt="O">
+        <h1 class="h1_title">&</h1>
+        <img class="img_title im2" src="assets/images/image_x.png" alt="X">
+        </div>
+        <div class="title">
+        <img class="img_title off im3" src="assets/images/image_x.png" alt="X">
+        <h1 class="h1_title">CROSSES</h1>
+        <img class="img_title off im3" src="assets/images/image_o.png" alt="O">
+        </div>
+        
     </div>
-    <div class="grill">
+    <div class="grill" >
+        <img class='blackboard'src="assets/images/blackboard.png" alt="" sizes="" srcset="">
+        <div class="replay"></div>
         <table>
             <tr class="row1">
                 <td id="g1" class="g1" onclick="player('1')"></td>
@@ -29,7 +48,9 @@
                 <td id="g9" class="g9"onclick="player('9')"></td>
             </tr>
         </table>
-
+        <!-- <button type="button" onClick="window.location.reload()">
+            Reload Page
+         </button>         -->
     </div>
 <script src="assets/js/index.js"></script>
 </body>
